# Chat-Application

Client/: CMakeLists.txt
Client/Includes/Chatbox/: chatbox.h
Client/Resources/: Resources.qrc
Client/Resources/Styles/: Chatbox.qss
Client/Sources/: main.cpp
Client/Sources/Chatbox/: chatbox.cpp  chatbox.ui
Server/: .gitignore  CMakeLists.txt  server.cpp
Server/Includes/Server/: server.h
Server/Resources/: Resources.qrc
Server/Resources/Styles/: Server.qss
Server/Sources/Server/: server.cpp  server.ui
